# Subject_Recommendation

./: Data.csv  Data1.csv  Data2.csv  Main.ipynb  Pipfile  README.md  Subjects.csv  add.csv  app.py  main.py  pyproject.toml  requirements.txt  wsgi.py
app/: Data.csv  main.py
app/templates/: add.html  index.html
templates/: add.html  index.html
