[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "limerosycarat"
version = "0.1.0"
[tool.poetry.dependencies]
anvil = "^0.0.2"
pandas = "^1.0"
python = "^3.7"
sklearn = "^0.0.0"
anvil-uplink = "^0.3.30"
flask = "^1.1"
[tool.poetry.dev-dependencies]
